EXTRA_DIST = \
	icd-gprs-up.sh icd-gprs-down.sh cellular-data-counter-cud.sh

gprsdir = $(sysconfdir)/gprs
dist_gprs_SCRIPTS = icd-gprs-up.sh icd-gprs-down.sh

cuddir = $(sysconfdir)/osso-cud-scripts
cud_SCRIPTS = cellular-data-counter-cud.sh

schemasdir = $(GCONF_SCHEMA_FILE_DIR)
schemas_DATA = libicd-network-ofono.schemas

MAINTAINERCLEANFILES = Makefile.in